🐞 fix(db): update db add and update pre cond
